More grammatical corrections

--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -25,10 +25,10 @@ In this analysis, a different approach based on the 6T5 condition, which is requ
 
 \begin{equation}
   \label{eq:nu_accep}
-  A_{hex}(E_{\nu}, X)  = \int^{\phi = 2\pi}_{\phi = 0} \,d\phi \int_{\theta_{min} = 58.5^{\circ}}^{\theta_{max}= 76.5^{\circ}}  \, A_{6T5} \cdot \varepsilon(E_{\nu}, X, \theta) \cdot \sin \theta \, \cos \theta \cdot d\theta    \mathrm{[cm^2 sr]}
+  A_{hex}(E_{\nu}, X)  = \int^{\phi = 2\pi}_{\phi = 0} \,d\phi \int_{\theta_{min} = 58.5^{\circ}}^{\theta_{max}= 76.5^{\circ}}  \, A_{6T5} \cdot \varepsilon(E_{\nu}, X, \theta) \cdot \sin \theta \, \cos \theta \cdot d\theta, \quad   \mathrm{[cm^2 sr]}
 \end{equation}
 
-,where $\varepsilon(E_{\nu}, X, \theta)$ is the neutrino detection efficiency for each simulated energy, slant depth and zenith discussed in the last chapter. An example for a particular combination is given in fig.~\ref{fig:Eff_X_comp} in the last chapter. Plots for efficiency for each combination can be found as part of the git repository made available for this analysis.
+where $\varepsilon(E_{\nu}, X, \theta)$ is the neutrino detection efficiency for each simulated energy, slant depth and zenith discussed in the last chapter. An example for a particular combination is given in fig.~\ref{fig:Eff_X_comp} in the last chapter. Plots for efficiency for each combination can be found as part of the git repository made available for this analysis.
 
 The next step involves integrating the \textit{acceptance} over the different simulated injected slant depths (as given in table~\ref{tab:Simulation_params}). This accounts for the \textit{effective mass} target for the neutrino identification over the 6T5 hexagon unit. It is calculated as follows: 
 
@@ -48,10 +48,10 @@ Fig.~\ref{fig:EffMass_flavors_comp} shows the effective mass for both CC and NC 
 Exposure calculation still needs to account for the detector configuration and its evolution over time. We reduced our array to units of 6T5 hexagons and a full SD array consisting of 1660 stations consists 1420 of these hexagons. Since the establishment of the Pierre Auger Observatory the active number of 6T5 hexagons are monitored every second. This forms a very good indicator for the time evolution of the SD array since any non-working station or large periods of instability are intrinsically recorded in the number of active 6T5 hexagons at that time. The instantaneous number of hexagons, $n_{\text{hex}}(t)$ thus can be used as an indicator of detector configurations over time. The $n_{\text{hex}}(t)$ were updated and calculated every minute and have an uncertainty of about 1.5\% as mentioned in~\cite{PierreAuger:2010zof}. To calculate the energy dependent exposure, the effective mass of one 6T5 hexagon is multiplied by the instantaneous number of hexagons and integrated in time. Further, the $\nu$ interaction probability for each flavour (i = $\nu_e, \nu_{\mu}, \nu_{\tau}$) and channel (c = CC, NC) is also folded in. The exposure is given as:
 
 \begin{equation}
-  \xi^{i,c}(E_{\nu}) = \frac{\sigma^{i,c}(E_{\nu})}{m_N} \int_{t} M_{\text{hex}}^{i,c}(E_{\nu}) \cdot n_{\text{hex}}(t) \cdot dt =  \frac{\sigma^{i,c}(E_{\nu})}{m_N} \cdot M_{\text{hex}}^{i,c}(E_{\nu}) \cdot N_{\text{hex}}
+  \xi^{i,c}(E_{\nu}) = \frac{\sigma^{i,c}(E_{\nu})}{m_N} \int_{t} M_{\text{hex}}^{i,c}(E_{\nu}) \cdot n_{\text{hex}}(t) \cdot dt =  \frac{\sigma^{i,c}(E_{\nu})}{m_N} \cdot M_{\text{hex}}^{i,c}(E_{\nu}) \cdot N_{\text{hex}},
 \end{equation}
 
-,$\sigma^{i,c}(E_{\nu})$ is the neutrino nucleon cross-section taken from~\cite{Cooper-Sarkar:2011jtt} and $N_{hex}$ is the total number of active 6T5 hexagons integrated in time over the search period. The value for $N_{hex}$ calculated for the period analysed is 2.8 $\times 10^{11}$ which is about $\sim$6.75 equivalent years of a fully functional SD array. The energy dependent exposure for different flavors and interaction channels is shown in fig~\ref{fig:Exp_flavors_comp}. It is necessary to point out again that the double bang showers which can be produced by $\nu_{tau}$ are not taken into account for this analysis which was also mentioned in sec.~\ref{sec:sim_DGL} 
+$\sigma^{i,c}(E_{\nu})$ is the neutrino nucleon cross-section taken from~\cite{Cooper-Sarkar:2011jtt} and $N_{hex}$ is the total number of active 6T5 hexagons integrated in time over the search period. The value for $N_{hex}$ calculated for the period analysed is 2.8 $\times 10^{11}$ which is about $\sim$6.75 equivalent years of a fully functional SD array. The energy dependent exposure for different flavors and interaction channels is shown in fig~\ref{fig:Exp_flavors_comp}. It is necessary to point out again that the double bang showers which can be produced by $\nu_{tau}$ are not taken into account for this analysis which was also mentioned in sec.~\ref{sec:sim_DGL} 
 
 \begin{figure}[t!]
   \centering
@@ -80,7 +80,7 @@ The sources of systematic uncertainties considered for this analysis are discuss
 \begin{description}
   \item \textbf{Primary interaction generator:} For the simulations used in this analysis which is based on CORSIKA 7.2 the only available option for the primary interaction generator is the HERWIG~\cite{Corcella:2000bw} code. Thus, it was not possible to compare the differences that could arise due to the use of different primary interaction generators. These systematic uncertainties were taken from ~\cite{gap_systematics} where PYTHIA~\cite{Sjostrand:2006za} and several versions of HERWIG are compared for CORSIKA 6. The uncertainties were found to be [+2.6\%, 3.7\%]. 
   \item \textbf{Parton Distribution function:} Again the uncertainties are taken from~\cite{gap_systematics} since this functionality is not available in CORSIKA 7. The systematic uncertainties on exposure quoted by the source are [+4\%, -5\%].
-  \item \textbf{Hadronic interaction models:} The choice of the hadronic model used for the simulations can also lead to systematic uncertainties since most of these models are tuned on different accelerator datasets measured at much lower energies than the ones investigated in this analysis. Since the systematic unvcertaintes due to the hadronic models calculated in this analysis were found to be below the statistic uncertainties. A realistic estimate of the systematic uncertainties due to the hadronic models was taken from~\cite{gap_systematics} particularly the uncertainty between QGSJETII and SIBYLL which is the closest analogy to this study where SIBYLL 2.3d was chosen as the reference model. The systematic uncertainties were chosen to be $+ 1\%$.
+  \item \textbf{Hadronic interaction models:} The choice of the hadronic model used for the simulations can also lead to systematic uncertainties since most of these models are tuned on different accelerator datasets measured at much lower energies than the ones investigated in this analysis. Since the systematic unvcertaintes due to the hadronic models calculated in this analysis were found to be below the statistic uncertainties. A realistic estimate of the systematic uncertainties due to the hadronic models was taken from~\cite{gap_systematics} particularly the uncertainty between QGSJET-II and SIBYLL which is the closest analogy to this study where SIBYLL 2.3d was chosen as the reference model. The systematic uncertainties were chosen to be $+ 1\%$.
   \item \textbf{Shower simulator and thinning algorithm:} The systematic uncertainties due to the differing shower simulation programs was estimated thorough the comparison quoted in~\cite{Huege:2022xbo} for both hadronic cascades and electromagnetic showers. The differences seen in different software are of the order $\sim 15\%$ which agree nicely with the results from~\cite{gap_systematics}. The uncertainties due to thinning were also calculated in~\cite{gap_systematics} and were found to be $\sim 7\%$.
   \item \textbf{Detector simulation:} The differences in the detector simulation software i.e. a GEANT4 based approach used in this analysis to other approaches is already compared in~\cite{gap_note_det_systematics}. The systematic uncertainties were found to be $\pm 5\%$. Further, in this analysis the simulated showers were reconstructed using two different Offline tags with no significant differences observed in the final exposure. 
   \item \textbf{Number of Hexagons:} For the total number of hexagons calculated we implicitly assume that all the stations are equal. However, if the new triggers are not active in a given station, this hexagon might not contribute the same as the other ones. So there is a systematic error associated with using the hexagon files as they are, as a station with 1 PMT is counted full there but likely should not for low energy neutrino showers. So simply put: the ToTd or MoPS not active are not affecting 6T5s, but only because 6T5 doesn't account for this fact. Or: the 6T5 is a binary condition assuming a station is either alive or not. While for any analysis with new triggers, in principle, we have to account for the situation of a station being alive but not sending new triggers. The systematic uncertainty associated with this effect was calculated by looking at the average number of stations with only one functional PMT over time. The uncertainty associated with this effect was found to be $\pm 2\%$ at most. 
@@ -239,10 +239,10 @@ Assuming a differential UHE$\nu$ flux $\phi = k \cdot E_{\nu}^{-2}$, the integra
 
 \begin{equation}
   \label{eq:integ_lim}
-  \mathrm{k_{up} = \frac{N_{up}}{\int_{E_{\nu min}}^{E_{\nu max}} E_{\nu}^{-2} \cdot \xi_{tot}(E_{\nu}) \cdot dE_{\nu}}}
+  \mathrm{k_{up} = \frac{N_{up}}{\int_{E_{\nu min}}^{E_{\nu max}} E_{\nu}^{-2} \cdot \xi_{tot}(E_{\nu}) \cdot dE_{\nu}}} \, ,
 \end{equation}
 
-, the value of $\mathrm{N_{up}}$ for a given confidence level can be determined based on the number of observed events and the number of expected background events. Different statistical methods can be used to obtain the value for $N_{up}$ based on the confidence interval. In the next sections some of these different statistical approaches are discussed in more detail. The Feldman and Cousins limit with an extension that incorporates the systematic uncertainties discussed above is chosen as a final estimate for $\mathrm{N_{up}}$.
+the value of $\mathrm{N_{up}}$ for a given confidence level can be determined based on the number of observed events and the number of expected background events. Different statistical methods can be used to obtain the value for $N_{up}$ based on the confidence interval. In the next sections some of these different statistical approaches are discussed in more detail. The Feldman and Cousins limit with an extension that incorporates the systematic uncertainties discussed above is chosen as a final estimate for $\mathrm{N_{up}}$.
 
 \subsection{Feldman and Cousins limit}
 \label{subsec:FandC}
