--- a/thesis_skel/thesis_appendix_A.tex
+++ b/thesis_skel/thesis_appendix_A.tex
@@ -2,7 +2,7 @@
 \chapter{CORSIKA steer file}
 \label{sec:app_1}
 %------------------------------------------------------------------------------
-An example of a CORSIKA steer file used to produce neutrino simulations for this analysis is presented below. The parameters used along with a brief description of their use is given below. The file was used to simualte a CC neutrino shower having a primary energy of 10$^{17.5}$eV, a zenith angle of $63^\circ$ and the interaction slant depth (X) of 1750 gcm$^{-2}$. The example shower used FLUKA as the low energy and Sibyll 2.3d as the high energy hadronic interaction model. The file was kindly provided by E. Santos from the MC task of the Pierre Auger Observatory.
+An example of a CORSIKA steer file used to produce neutrino simulations for this analysis is presented below. The parameters used along with a brief description of their use is given below. The file was used to simulate a CC neutrino shower having a primary energy of 10$^{17.5}$eV, a zenith angle of $63^\circ$ and the interaction slant depth (X) of 1750 gcm$^{-2}$. The example shower used FLUKA as the low energy and SIBYLL 2.3d as the high energy hadronic interaction model. The file was kindly provided by E. Santos from the MC task of the Pierre Auger Observatory.
 
 \begingroup
   \fontfamily{cmtt}\selectfont 
