--- a/thesis_skel/thesis_appendix_B.tex
+++ b/thesis_skel/thesis_appendix_B.tex
@@ -9,7 +9,7 @@ The comparison was done by calculating the ratio of the surviving events for bot
 \begin{figure}[t!]
   \centering
   \includegraphics[width=0.95\textwidth]{thesis_figures/App2/Efficiency_vs_slant_comp_FLUKAnURQMD.pdf}
-  \caption{Comparison of ratio of total reconstructed events between FLUKA and URQMD for $\nu_e$ CC showers with a primary energy of $10^{19}$eV for a zenith angle of $72^\circ$ for five different injected slant depths. The ratio of the surviving events for both the models at each simulated slant depth is shown for different identification efficiencies. The $\nu$ identification efficiency has been shifted for better visualization. The error bars signify the statistical error.}
+  \caption{Comparison of ratio of total reconstructed events between FLUKA and UrQMD for $\nu_e$ CC showers with a primary energy of $10^{19}$eV for a zenith angle of $72^\circ$ for five different injected slant depths. The ratio of the surviving events for both the models at each simulated slant depth is shown for different identification efficiencies. The $\nu$ identification efficiency has been shifted for better visualization. The error bars signify the statistical error.}
   \label{fig:Efficiency_vs_slant_comp_FLUKAnURQMD}
 \end{figure}
 
