--- a/thesis_skel/thesis_appendix_E.tex
+++ b/thesis_skel/thesis_appendix_E.tex
@@ -2,7 +2,7 @@
 \chapter{Adapting DGH analysis to current Offline}
 \label{sec:app_5}
 %------------------------------------------------------------------------------
-This section aims to present the work done during this thesis to adapt the Down Going High neutrino analysis as a Standard Application to work with the current Offline version. The Down going high neutrino analysis was first created in 2011 and has not been updated since then. This has led to the ModuleSequence used in the erstwhile analysis to be incompatible with the new Offline versions. The work involved creating a Modulesequence that mimics the old analysis but is compatible with the new structure of Offline. This work has required a lot of input from J. Muniz  who was one of the authors of the original analysis. In the next few paragraphs the changes made to the original ModuleSequence are discussed along with the reasons for the choices made. The new ModuleSequence is then tested on a few events to check if the output is consistent with the old analysis. The work is still in progress and requires further testing and validation before it can be used for the analysis. 
+This section aims to present the work done during this thesis to adapt the Down Going High neutrino analysis as a Standard Application to work with the current Offline version. The Down going high neutrino analysis was first created in 2011 and has not been updated since then. This has led to the ModuleSequence used in the erstwhile analysis to be incompatible with the new Offline versions. The work involved creating a Modulesequence that mimics the old analysis but is compatible with the new structure of Offline. This work has required a lot of input from J. Muñiz  who was one of the authors of the original analysis. In the next few paragraphs the changes made to the original ModuleSequence are discussed along with the reasons for the choices made. The new ModuleSequence is then tested on a few events to check if the output is consistent with the old analysis. The work is still in progress and requires further testing and validation before it can be used for the analysis. 
 
 The previous version of the Module sequence is presented below:
 \begingroup
