--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -63,14 +63,14 @@ The FD acts as an important calibration tool for the SD, especially for the ener
   \label{fig:SD_drawing}
   \end{figure}
 
-The \gls*{SD} baseline design consisted of a \gls{WCD} array which is used to detect the EAS on the ground by detecting the shower particles that reach the ground. Each WCD comprises of a tank with 3.6 m diameter and 1.2 m height~\cite{PierreAuger:2007kus}. It also consists of a reflective inner liner containing 12,000 litres of ultrapure water. Three 9-in PMTs look into the water and detect the Cherenkov light produced by the charged shower particles as they traverse through the water. With the AugerPrime upgrade the WCDs have also been equipped with a scintillator, additional PMT and a radio antenna on top. These are described later in section~\ref{sec:Aug_prime}. Each WCD tank also has its own electronics and communication system. All the components are powered using a solar panel. An artistic representation along with all the components is shown in Fig.~\ref{fig:SD_drawing}. 
+The \gls*{SD} baseline design consisted of a \gls{WCD} array which is used to detect the EAS on the ground by detecting the shower particles that reach the ground. Each WCD comprises a tank with 3.6 m diameter and 1.2 m height~\cite{PierreAuger:2007kus}. It also consists of a reflective inner liner containing 12,000 litres of ultrapure water. Three 9-in PMTs look into the water and detect the Cherenkov light produced by the charged shower particles as they traverse through the water. With the AugerPrime upgrade the WCDs have also been equipped with a scintillator, additional PMT and a radio antenna on top. These are described later in section~\ref{sec:Aug_prime}. Each WCD tank also has its own electronics and communication system. All the components are powered using a solar panel. An artistic representation along with all the components is shown in Fig.~\ref{fig:SD_drawing}. 
 
 The 1.5 km grid spacing is commonly referred to as SD-1500. There are further sub-arrays within the SD, SD-750 also called the infill and SD-433 with the numbers representing the distance between the tanks in the sub-arrays in meters. Each WCD can be operated on its own with each PMT signal first recorded at the station and then combined using a Central Data Acquisition System (CDAS)~\cite{Auger:2015} which uses a ranked system of triggers to decide if the combination of all WCDs is a candidate for an EAS event. The data taking process of the SD is described in more detail in the following sections. Due to its autonomous nature, the SD array is easy to maintain and has a duty cycle $\simeq$100\%. The array is only affected if there is a communication outage or if the solar panel cannot generate power for an extended time period both of which are rare at the site of the Pierre Auger Observatory. For this study whenever the SD is mentioned it refers to the SD-1500 array with only the WCD component unless specified otherwise.     
 
 \subsection{Calibration of SD}
 \label{sec:Sur_det_calib}
 
-The PMT signals in the WCDs are digitised by a 40 MHz 10 bit \textit{\acrlongpl{FADC}} (\acrshortpl{FADC})~\cite{PierreAuger:2005znw}. One of the signals is taken from the anode of the PMT and is called the \textit{low gain} channel and the other is taken by the last dynode and is amplified by a factor of 32 and is called the \textit{high gain} channel. The two signals provide sufficient precision and range to record both the signals produced near the shower core ($\sim$1000 particles/$\mathrm{\mu}$s) and those produced far from the core ($\sim$1 particles/$\mathrm{\mu}$s). The signal trace is recorded at a sampling rate of 40 MHz with a total of 768 bins leading to each bin width corresponding to 25 ns. Due to varying electronics across the WCDs a robust procedure is needed to calibrate each station to a universal unit of measurement for the SD. Also, due to the remoteness of the WCDs such a procedure needs to be performed locally for each station to allow for its functioning even in the case of individual broken PMTs. The unit of measurement used to calibrate the SD stations is called \textit{\acrlong{VEM}} (\acrshort{VEM}). This is the charge deposited by a \gls{VCT} muon in the WCD station. The SD station by itself cannot select these particular muons but the normal SD measurement of all atmospheric muons has been studied in comparison with a muon telescope that only triggers these VCTs for a reference tank~\cite{PierreAuger:2005cju}. This measurement is used to calibrate the SD.
+The PMT signals in the WCDs are digitized by a 40 MHz 10 bit \textit{\acrlongpl{FADC}} (\acrshortpl{FADC})~\cite{PierreAuger:2005znw}. One of the signals is taken from the anode of the PMT and is called the \textit{low gain} channel and the other is taken by the last dynode and is amplified by a factor of 32 and is called the \textit{high gain} channel. The two signals provide sufficient precision and range to record both the signals produced near the shower core ($\sim$1000 particles/$\mathrm{\mu}$s) and those produced far from the core ($\sim$1 particles/$\mathrm{\mu}$s). The signal trace is recorded at a sampling rate of 40 MHz with a total of 768 bins leading to each bin width corresponding to 25 ns. Due to varying electronics across the WCDs a robust procedure is needed to calibrate each station to a universal unit of measurement for the SD. Also, due to the remoteness of the WCDs such a procedure needs to be performed locally for each station to allow for its functioning even in the case of individual broken PMTs. The unit of measurement used to calibrate the SD stations is called \textit{\acrlong{VEM}} (\acrshort{VEM}). This is the charge deposited by a \gls{VCT} muon in the WCD station. The SD station by itself cannot select these particular muons but the normal SD measurement of all atmospheric muons has been studied in comparison with a muon telescope that only triggers these VCTs for a reference tank~\cite{PierreAuger:2005cju}. This measurement is used to calibrate the SD.
 
 \begin{figure}[h!]
   \centering
@@ -169,7 +169,7 @@ The MoPS trigger~\cite{gap_note_2011} was implemented to achieve a similar goal 
   \centering
   \subcaptionbox{Contribution to the different triggers to the efficiency as a function
   of the mean expected signal. Respectively green, blue, pink and cyan
-  for ToT, ToTd, MOPs and Th.\label{sub:fig:Triiger_eff_infill}}{\includegraphics[width=.45\textwidth]{thesis_figures/Setup/Efficiency_triggers.png}}
+  for ToT, ToTd, MoPS and TH.\label{sub:fig:Triiger_eff_infill}}{\includegraphics[width=.45\textwidth]{thesis_figures/Setup/Efficiency_triggers.png}}
   \hfill
   \subcaptionbox{The change in the triggering efficiency with zenith angle.\label{sub:fig:Trigger_eff_theta}}{\includegraphics[width=.45\textwidth]{thesis_figures/Setup/Triggering_efficiency_theta.png}}
   \caption{Trigger efficiency for different triggers implemented at the Pierre Auger Observatory calculated using the SD-750 array for zenith angles below $60^{\circ}$. Taken from~\cite{gap_note_2017}}
@@ -232,11 +232,11 @@ In the context of this thesis, the data from the ongoing upgrade and the precedi
 \section{The \texorpdfstring{$\overline{\text{Off}} \underline{\text{line}}$}{} Framework}
 \label{sec:Offline}
 
-The $\mathrm{\overline{Off} \underline{line}}$ framework~\cite{Argiro:2007qg,PierreAuger:2023cqe} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA~\cite{Heck:1998vt}, Aires~\cite{Sciutto:1999jh} etc. and the data recorded at the observatory. $\mathrm{\overline{Off} \underline{line}}$ aims to standardize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis. It also allows for the physics analysis to be stored and implemented within the framework which helps in leading and optimising productivity. The modular design allows it to be constantly updated for the addition of new functionality and detectors. The framework is available internally on GitLab to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off} \underline{line}}$ consists of three fundamental constituents as shown in Fig.~\ref{fig:Offline_schematic}. These are summarised below:
+The $\mathrm{\overline{Off} \underline{line}}$ framework~\cite{Argiro:2007qg,PierreAuger:2023cqe} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA~\cite{Heck:1998vt}, Aires~\cite{Sciutto:1999jh} etc. and the data recorded at the observatory. $\mathrm{\overline{Off} \underline{line}}$ aims to standardize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis. It also allows for the physics analysis to be stored and implemented within the framework which helps in leading and optimizing productivity. The modular design allows it to be constantly updated for the addition of new functionality and detectors. The framework is available internally on GitLab to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off} \underline{line}}$ consists of three fundamental constituents as shown in Fig.~\ref{fig:Offline_schematic}. These are summarized below:
 
 
 
-\paragraph*{Detector description:}
+\paragraph*{Detector description:} 
 This part acts as an input and consists of information about the individual detector systems of the Pierre Auger Observatory. The information is available to the data processing modules as needed but cannot be modified. The static information such as the layout of the detector is stored in XML files whereas the time dependent information such as atmospheric conditions, hardware changes, calibration information etc. is stored in MySQL databases. For real events this allows for an almost perfect duplication of the conditions and for simulations it offers a vast range of available detector configurations.  
 
 \begin{figure}[t!]
