--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -5,7 +5,7 @@
 \label{chap:EAS}
 %==============================================================================
 
-As mentioned in the previous chapter an \gls{EAS} is a cascade of high-energy particles that is produced when an \gls{UHECR}, typically a proton or a nucleus, collides with a nucleus in Earth's atmosphere. This cascade can span over hundred to thousands of meters based on the energy of the initial particle and the incoming zenith angle. EASs offer the best way to look for UHECRs since the low flux of these particles make direct detection using detectors mounted on balloons or spacecrafts not feasible. The EAS can be detected at the ground via an array of detectors. To infer the properties of the \gls{CR} from the EAS it creates, one needs to model and understand how an air shower develops in the atmosphere. This chapter describes the process of the initiation and the development of the shower induced by CRs and neutrinos. It also aims to describe the important characteristics of EASs which help in extracting the relevant information and the last part of this chapter is devoted to summarise the detection of the EASs using different detector systems. 
+As mentioned in the previous chapter an \gls{EAS} is a cascade of high-energy particles that is produced when an \gls{UHECR}, typically a proton or a nucleus, collides with a nucleus in Earth's atmosphere. This cascade can span over hundred to thousands of meters based on the energy of the initial particle and the incoming zenith angle. EASs offer the best way to look for UHECRs since the low flux of these particles make direct detection using detectors mounted on balloons or spacecrafts not feasible. The EAS can be detected at the ground via an array of detectors. To infer the properties of the \gls{CR} from the EAS it creates, one needs to model and understand how an air shower develops in the atmosphere. This chapter describes the process of the initiation and the development of the shower induced by CRs and neutrinos. It also aims to describe the important characteristics of EASs which help in extracting the relevant information and the last part of this chapter is devoted to summarize the detection of the EASs using different detector systems. 
 
 \begin{figure}[t!]
     \centering
@@ -39,13 +39,13 @@ To understand the cascade of particles a detailed modelling of each component is
 \subsection{Heitler's Toy Model}
 \label{sec:Dev_Heitler}
 
-Proposed by Heitler in 1954~\cite{heitler1984quantum}, Heitler's Toy Model is a simplified perfect binary tree to understand and model an EAS development. The model characterises an EAS as a perfect binary tree. In such a scenario all particles produced in a shower equally share the primary energy available at the time of their creation. At each step, which has a fixed size related to the radiation length of the medium $\lambda$, the number of particles are supposed to be doubled, with each having the same energy. The energy losses which may occur due to collisions are completely ignored. The shower development or splitting process is supposed to continue until a critical point where the energy required to create more particles becomes the same as energy lost by particles in the medium. At the critical point, the shower has the maximum number of particles given by, $N_{\text{max}} = E_0/E_c$, which is the ratio of the original energy ($E_0$) to the critical energy ($E_c \sim 87$MeV). After this point the shower keeps getting absorbed in the atmosphere. The penetration depth at this point is called the shower maximum denoted by $X_{\text{max}}$. This can be calculated to be $X_{\text{max}} = X_0 + \lambda_r \ln(E_0/E_c)$ where $X_0$ is the first interaction point in the atmosphere. A visualisation of the shower development according to the Heitler's model is shown in Fig.~\ref{fig:EAS_toy_model}.
+Proposed by Heitler in 1954~\cite{heitler1984quantum}, Heitler's Toy Model is a simplified perfect binary tree to understand and model an EAS development. The model characterizes an EAS as a perfect binary tree. In such a scenario all particles produced in a shower equally share the primary energy available at the time of their creation. At each step, which has a fixed size related to the radiation length of the medium $\lambda$, the number of particles are supposed to be doubled, with each having the same energy. The energy losses which may occur due to collisions are completely ignored. The shower development or splitting process is supposed to continue until a critical point where the energy required to create more particles becomes the same as energy lost by particles in the medium. At the critical point, the shower has the maximum number of particles given by, $N_{\text{max}} = E_0/E_c$, which is the ratio of the original energy ($E_0$) to the critical energy ($E_c \sim 87$MeV). After this point the shower keeps getting absorbed in the atmosphere. The penetration depth at this point is called the shower maximum denoted by $X_{\text{max}}$. This can be calculated to be $X_{\text{max}} = X_0 + \lambda_r \ln(E_0/E_c)$ where $X_0$ is the first interaction point in the atmosphere. A visualization of the shower development according to the Heitler's model is shown in Fig.~\ref{fig:EAS_toy_model}.
 
-Such a simplified model works quite well for estimating the properties of the electromagnetic cascades although the $N_{\text{max}}$ estimations do not match perfectly. The reason for this is the difference in the energy loss values for electrons and photons. For hadronic cascades an extension to the model was made. Other important properties of the shower such as lateral and longitudinal spread, also require taking into account the emittance direction and losses due to collision which are not taken into account for a simplified model. These are discussed in sec.~\ref{sec:EAS_cha}. Even with its shortcomings the Heitler model gives a very good estimation for electromagnetic cascades and helps clearly categorise an air shower into three phases, the growth phase, the critical point phase and the tail phase. 
+Such a simplified model works quite well for estimating the properties of the electromagnetic cascades although the $N_{\text{max}}$ estimations do not match perfectly. The reason for this is the difference in the energy loss values for electrons and photons. For hadronic cascades an extension to the model was made. Other important properties of the shower such as lateral and longitudinal spread, also require taking into account the emittance direction and losses due to collision which are not taken into account for a simplified model. These are discussed in sec.~\ref{sec:EAS_cha}. Even with its shortcomings the Heitler model gives a very good estimation for electromagnetic cascades and helps clearly categorize an air shower into three phases, the growth phase, the critical point phase and the tail phase. 
 
 \subsection{Hadronic Extension}
 \label{sec:Dev_Had}
-The Heitler model was extended by Matthews~\cite{MATTHEWS2005387} to characterise the hadronic cascades in an EAS. In his approximation when a hadron with Energy, $E$ interacts with a nucleon the total particles produced have a two-third charged component ($\pi^\pm $) and a one-third neutral component ($\pi^0$) with the initial energy equally divided based on the number fraction. The neutral component decays quickly and contributes its share of energy to the electromagnetic component. The charged hadrons, provided they have not reached their critical energy in air ($\sim$20 GeV), interact again repeating the initial process. Muons are only produced when the charged hadrons acquire an energy below the critical energy. The energy transfer for each component after $n$ generations is given as $E_{\text{had}} = \biggl(\frac{2}{3}\biggr)^n E_0$ and $E_{\text{em}} = \big[1- \biggl(  \frac{2}{3}\biggr)^n\big] \, E_0$. Deeply penetrating air shower i.e a primary with high energy and a low enough cross-section in air, results in a lower number of muons produced, and observed at ground. This fact is important as based on the ratio of muons to electrons observed at ground, the type of the primary can be estimated. The number of muons ($N_{\mu}$) can be estimated in this model directly from charged hadrons when their energy falls below the critical energy. For $n$ generations one finds, $N_{\mu} = n_{\text{ch}}^n$ where $n_{\text{ch}}$ is the number of charged hadrons and $n$ can be written as $n = \frac{\ln(E_0/E_c)}{\ln(n_{\text{tot}})}$. Generalising by eliminating generations:
+The Heitler model was extended by Matthews~\cite{MATTHEWS2005387} to characterize the hadronic cascades in an EAS. In his approximation when a hadron with Energy, $E$ interacts with a nucleon the total particles produced have a two-third charged component ($\pi^\pm $) and a one-third neutral component ($\pi^0$) with the initial energy equally divided based on the number fraction. The neutral component decays quickly and contributes its share of energy to the electromagnetic component. The charged hadrons, provided they have not reached their critical energy in air ($\sim$20 GeV), interact again repeating the initial process. Muons are only produced when the charged hadrons acquire an energy below the critical energy. The energy transfer for each component after $n$ generations is given as $E_{\text{had}} = \biggl(\frac{2}{3}\biggr)^n E_0$ and $E_{\text{em}} = \big[1- \biggl(  \frac{2}{3}\biggr)^n\big] \, E_0$. Deeply penetrating air shower i.e a primary with high energy and a low enough cross-section in air, results in a lower number of muons produced, and observed at ground. This fact is important as based on the ratio of muons to electrons observed at ground, the type of the primary can be estimated. The number of muons ($N_{\mu}$) can be estimated in this model directly from charged hadrons when their energy falls below the critical energy. For $n$ generations one finds, $N_{\mu} = n_{\text{ch}}^n$ where $n_{\text{ch}}$ is the number of charged hadrons and $n$ can be written as $n = \frac{\ln(E_0/E_c)}{\ln(n_{\text{tot}})}$. Generalizing by eliminating generations:
 
 \begin{equation}
     N_{\mu} = \biggl(\frac{E_0}{E_c}\biggr)^{\alpha} , \, \alpha = \frac{\ln (n_{\text{ch}})}{\ln (n_{\text{tot}})}
@@ -63,7 +63,7 @@ The first interaction with the nucleon was presented in a simplified way by Matt
 \end{description}
 Simulations have shown that the superposition model gives a more realistic description of many features of the shower~\cite{Wibig_2022}. However, it is still not a perfect description especially for heavier nuclei. Studies with photographic emulsion techniques have tried to create a better picture of the fragmentation of heavier nuclei~\cite{LI2013503}. This field is continuously evolving with better models and theoretical predictions being worked on based on the continually increasing database of observations. 
 
-Although these models help understand the principle, a full Monte Carlo simulation and a generalised analytical solution of the cascade equations is needed to fully recreate the EAS. Even after huge amount of efforts made a few discrepancies such as the muon puzzle which is the mismatch in the number of muons predicted by the simulations in comparison to the measurements remain~\cite{Albrecht_2022_muon_puzzle}.  
+Although these models help understand the principle, a full Monte Carlo simulation and a generalized analytical solution of the cascade equations is needed to fully recreate the EAS. Even after huge amount of efforts made a few discrepancies such as the muon puzzle which is the mismatch in the number of muons predicted by the simulations in comparison to the measurements remain~\cite{Albrecht_2022_muon_puzzle}.  
 
 \subsection{LPM effect}
 \label{subsec:LPM}
@@ -71,7 +71,7 @@ Another process that can directly impact the development of highly energy electr
 
 \subsection{Neutrino induced EAS}
 \label{sec:Dev_Nu}
-The development of a neutrino induced shower in comparison to a CR shower is important in the context of this study. Understanding the differences helps to identify the unique signature at a CR observatory like the Pierre Auger. The differences in the shower development can also help increase the sensitivity of a neutrino observatory like the IceCube. Unlike a cosmic ray particle a neutrino can interact at any depth. This is due to the low neutrino cross-section at $10^{18}\,$eV $\approx 10^{-33} \mathrm{cm^2}$  in comparison, for e.g. the proton-nucleon cross-section which is $\approx 10^{-27} \mathrm{cm^2}$. Thus, neutrino-induced showers require significantly higher neutrino energies to produce interactions with observable effects. The main channel via which an ultra-high energy neutrino can interact is either a CC or NC interaction as mentioned in the last chapter. Neutrino-induced showers involve fewer particles in the initial interaction which translates to difference in the shower development in comparison to CR induced air showers. The development of the shower and the unique signature depend on the flavor of the neutrino as shown in fig~\ref{fig:NU_EAS_channels}.
+The development of a neutrino induced shower in comparison to a CR shower is important in the context of this study. Understanding the differences helps to identify the unique signature at a CR observatory like the Pierre Auger. The differences in the shower development can also help increase the sensitivity of a neutrino observatory like the IceCube. Unlike a cosmic ray particle a neutrino can interact at any depth. This is due to the low neutrino cross-section at $10^{18}\,$eV $\approx 10^{-33} \mathrm{cm^2}$  in comparison, for e.g. the proton-nucleon cross-section which is $\approx 10^{-27} \mathrm{cm^2}$. Thus, neutrino-induced showers require significantly higher neutrino energies to produce interactions with observable effects. The main channel via which an ultra-high energy neutrino can interact is either a CC or NC interaction as mentioned in the last chapter. Neutrino-induced showers involve fewer particles in the initial interaction which translates to difference in the shower development in comparison to CR induced air showers. The development of the shower and the unique signature depend on the flavor of the neutrino as shown in Fig.~\ref{fig:NU_EAS_channels}.
 % \begin{figure}[t!]
 %     \centering
 %     \includegraphics[width=14.5cm]{thesis_figures/EAS/Nu_EAS_channels.png}
@@ -101,7 +101,7 @@ All three neutrino flavors can also undergo NC interactions. These also result i
 
 \section{Characteristics}
 \label{sec:EAS_cha}
-Apart from the shower maximum and the number of muons at ground other observables are also required to fully characterise the shower and estimate the important quantities such as the mass, energy and the arrival direction of the incoming primary CR or UHE$\nu$. Fig.~\ref{fig:EAS_schematic} gives an overall picture of the evolution of an EAS. The amount of atmosphere penetrated is measured in units of slant depth X, with a unit of $\mathrm{g/cm^2}$. The first interaction depth, $X_0$, is the slant depth until the first interaction of the primary particle with the nucleon. The shower begins from this point on and the vector along which the shower develops from the first interaction point is called the \textit{shower axis}. The development continues till the shower reaches a maximum which was defined earlier and is denoted by $X_{\text{max}}$. After this point the shower depopulates which is caused by particle energy loss due to absorption or decay. The \textit{longitudinal development profile} plotted in Fig.~\ref{fig:EAS_schematic} gives a relation between the number of shower particle in dependence to the atmospheric depth. This relation is also called the Gaisser-Hillas function~\cite{1977ICRC....8..353G} parametrised as follows.
+Apart from the shower maximum and the number of muons at ground other observables are also required to fully characterize the shower and estimate the important quantities such as the mass, energy and the arrival direction of the incoming primary CR or UHE$\nu$. Fig.~\ref{fig:EAS_schematic} gives an overall picture of the evolution of an EAS. The amount of atmosphere penetrated is measured in units of slant depth X, with a unit of $\mathrm{g/cm^2}$. The first interaction depth, $X_0$, is the slant depth until the first interaction of the primary particle with the nucleon. The shower begins from this point on and the vector along which the shower develops from the first interaction point is called the \textit{shower axis}. The development continues till the shower reaches a maximum which was defined earlier and is denoted by $X_{\text{max}}$. After this point the shower depopulates which is caused by particle energy loss due to absorption or decay. The \textit{longitudinal development profile} plotted in Fig.~\ref{fig:EAS_schematic} gives a relation between the number of shower particle in dependence to the atmospheric depth. This relation is also called the Gaisser-Hillas function~\cite{1977ICRC....8..353G} parametrized as follows.
 
 \begin{equation}
     N(X) =  N_{\text{max}} \biggl(\frac{X- X_0}{X_{\text{max}} -  X_0}\biggr)^{\frac{X_{\text{max}}-X_0}{\lambda}} \exp \biggl(\frac{X_{\text{max}}-X_0}{\lambda}\biggr)
@@ -115,10 +115,10 @@ Apart from the shower maximum and the number of muons at ground other observable
 \end{figure}
 
 $X_0$ and $\lambda$ can be estimated by fitting the profile based on the above function and depend on the composition and energy of the primary. $N_{\text{max}}$ is the number of particles observed at $X_{\text{max}}$. The integral of the longitudinal development profile gives an estimate of the total calorimetric energy deposited by the shower. 
-The point where the shower axis vector intersects the ground is called the \textit{shower core}. The shower axis is thus defined by the zenith angle $\theta$, azimuth angle $\phi$ and the shower core position. If one looks at the shower head on, the large thin disc like appearance consisting of highly energetic particles is called the \textit{shower front}. The shape is due to the path length differences between the shower particles travelling away from the shower axis to the one travelling in the direction of the shower axis. The disc is thus thinner near the shower core and widens away from it. As the shower front intersects the ground, the density and the timing of the particles detected at the detector form what is called the \textit{shower footprint}. It is the primary observable used by a ground level EAS detector to measure and characterise the shower. The arrival time of the particles in the footprint can help determine the shower geometry whereas the density can be used to reconstruct the energy of the primary. The density is estimated as a function of the radial distance from the shower core on the ground, by the \gls{LDF}. The modern LDF function is an extension on the parameterisation given by Greisen~\cite{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431} and by Kamata and Nishimura~\cite{10.1143/PTPS.6.93} and is described as:
+The point where the shower axis vector intersects the ground is called the \textit{shower core}. The shower axis is thus defined by the zenith angle $\theta$, azimuth angle $\phi$ and the shower core position. If one looks at the shower head on, the large thin disc like appearance consisting of highly energetic particles is called the \textit{shower front}. The shape is due to the path length differences between the shower particles travelling away from the shower axis to the one travelling in the direction of the shower axis. The disc is thus thinner near the shower core and widens away from it. As the shower front intersects the ground, the density and the timing of the particles detected at the detector form what is called the \textit{shower footprint}. It is the primary observable used by a ground level EAS detector to measure and characterize the shower. The arrival time of the particles in the footprint can help determine the shower geometry whereas the density can be used to reconstruct the energy of the primary. The density is estimated as a function of the radial distance from the shower core on the ground, by the \gls{LDF}. The modern LDF function is an extension on the parameterization given by Greisen~\cite{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431} and by Kamata and Nishimura~\cite{10.1143/PTPS.6.93} and is described as:
 \begin{equation}
     \label{eq:Lateral_dist_func}
-    \rho_e(r) = \frac{N_e}{2 \pi R_M^2} C(s) \biggl(\frac{r}{R_M}\biggr)^{(s-2)}\biggl(\frac{r}{R_M}+1\biggr)^{(s-4.5)}
+    \rho_e(r) = \frac{N_e}{2 \pi R_M^2} C(s) \biggl(\frac{r}{R_M}\biggr)^{(s-2)}\biggl(\frac{r}{R_M}+1\biggr)^{(s-4.5)},
 \end{equation}
 
 with shower ages $s$ and the Moliere radius $R_M = 0.0265 \,X_0(Z + 1.2)$.
@@ -127,7 +127,7 @@ Another important characteristic of an EAS are its universality features first p
 \begin{equation}
     s = \frac{3}{1+2 X_{max}/X}
 \end{equation}
-This parameter is a result of the nature of the development of the cascade process which hides the initial primary dependent fluctuations~\cite{Fedosimova:2017vxz}. Simulations have used such a universal feature to fit shower profiles reasonably well independent of the primary mass and energy~\cite{Bridgeman:2017MD}. Air shower universality only holds for air showers induced by gamma rays, electrons, or positrons and breaks down for a hadronic cascade. It can still be used if each individual component of the shower can be disentangled. Although, not applicable for this study,universality is an important characteristic of the shower and has been used in various CR~\cite{cazon2024protonairinteractionsultrahighenergies} studies such as to estimation of the proton-air cross-section~\cite{Ulrich_2009} and other CR studies.
+This parameter is a result of the nature of the development of the cascade process which hides the initial primary dependent fluctuations~\cite{Fedosimova:2017vxz}. Simulations have used such a universal feature to fit shower profiles reasonably well independent of the primary mass and energy~\cite{Bridgeman:2017MD}. Air shower universality only holds for air showers induced by gamma rays, electrons, or positrons and breaks down for a hadronic cascade. It can still be used if each individual component of the shower can be disentangled. Although, not applicable for this study, universality is an important characteristic of the shower and has been used in various CR~\cite{cazon2024protonairinteractionsultrahighenergies} studies such as to estimation of the proton-air cross-section~\cite{Ulrich_2009} and other CR studies.
 
 \section{Detection}
 \label{sec:EAS_det}
@@ -135,7 +135,7 @@ At high energies, due to the low flux, EAS offer the best way to detect CRs. Gro
 
 \subsection{Fluorescence Detection}
 \label{sec:EAS_flu}
-Atmospheric fluorescence, observable in air showers above \(10^{17}\) eV, involves the emission of faint optical and \gls{UV} light when high-energy particles from extensive air showers interact with nitrogen molecules in Earth's atmosphere. These interactions excite the nitrogen molecules, which emit UV light during de-excitation, primarily in the near-ultraviolet range. The number of photons emitted is directly proportional to the energy deposited by the shower particles, allowing researchers to estimate the primary particle's energy. At altitudes between 5 km and 10 km, the photon yield varies with height, typically producing 4-5 photons per meter per charged particle, and these photons can be detected from distances up to 35 km.
+Atmospheric fluorescence, observable in air showers above \(10^{17}\) eV, involves the emission of faint optical and \gls{UV} light when high-energy particles from extensive air showers interact with nitrogen molecules in Earth's atmosphere. These interactions excite the nitrogen molecules, which emit UV light during de-excitation, primarily in the near-ultraviolet range. The number of photons emitted is directly proportional to the energy deposited by the shower particles, allowing researchers to estimate the primary particle's energy. At altitudes between 5 km and 10 km, the photon yield varies with height, typically producing 4–5 photons per meter per charged particle, and these photons can be detected from distances up to 35 km.
 
 Fluorescence telescopes measure this light intensity, enabling reconstruction of the shower's longitudinal profile and energy. However, their operational duty cycle is limited as they require clear, moonless nights. Accurate reconstruction also depends on constant atmospheric monitoring to adjust for variations in light yield. Early experiments, such as those at Volcano Ranch~\cite{1977PhRvL..39..847B} and the Fly's Eye experiment~\cite{BALTRUSAITIS1985410,BALTRUSAITIS198887}, pioneered this detection technique. Today, it remains a crucial method used by observatories like the Pierre Auger Observatory and \gls{TA}.
 
